--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,7 @@
     
 
     .logo {
-        color: white;
+        color: rgb(255, 255, 255);
         font-family: 'Montserrat', sans-serif;
         position: absolute;
         top: 48px;
@@ -1208,6 +1208,7 @@ hr {
 
     .section-2 {
         height: 3170px;
+        width: 320px;
         background-color: #fff;
     }
 
