--- a/styles/main.css
+++ b/styles/main.css
@@ -768,7 +768,7 @@ hr {
 
 @media screen and (max-width: 767px) {
   main{
-    width: 320px;
+    width: 768px;
   }
   .photo-section-1 {
     background-image: url(../img/2img/Background.png);
@@ -1006,15 +1006,19 @@ hr {
     width: 768px;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 380px) {
   main{
-    width: 320px;
+    width: 380px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .photo-section-1 {
     background-image: url(../img/2img/Background3.png);
     height: 540px;
-    width: 320px;
+    width: 380px;
     margin-left: 0px;
+    background-repeat: no-repeat;
   }
   .photo-section-1 .logo {
     position: absolute;
@@ -1168,7 +1172,8 @@ hr {
   .block-3__photo2 {
     position: absolute;
     top: 1655px;
-    left: 297px;
+    left: 317px;
+    
   }
   .block-3__photo2 h2 {
     margin-top: 14px;
@@ -1184,7 +1189,7 @@ hr {
     margin-top: 55px;
     position: absolute;
     top: 1655px;
-    left: 50px;
+    left: 72px;
   }
   .block-3__photo3 p {
     margin-top: 28px;
@@ -1194,7 +1199,7 @@ hr {
     height: 225px;
     position: absolute;
     top: 2407px;
-    left: -197px;
+    left: -176px;
   }
   .block-3__photo4 h2 {
     width: 240px;
@@ -1206,7 +1211,7 @@ hr {
     margin-left: -10px;
   }
   .block-3__button {
-    margin-top: 733px;
+    margin-top: 753px;
     margin-left: 10px;
     width: 280px;
     height: 40px;
