--- a/styles/main.css
+++ b/styles/main.css
@@ -768,10 +768,11 @@ hr {
 
 @media screen and (max-width: 767px) {
   main{
-    width: 768px;
+   width: 100%;
   }
   .photo-section-1 {
     background-image: url(../img/2img/Background.png);
+    width: 100%;
   }
   .photo-section-1 .logo {
     position: absolute;
@@ -1006,9 +1007,23 @@ hr {
     width: 768px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 400px) {
   main{
-    width: 400px;
+    width: 330px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1016,8 +1031,8 @@ hr {
   .photo-section-1 {
     background-image: url(../img/2img/Background3.png);
     height: 540px;
-    width: 380px;
-    margin-left: 0px;
+    width: 320px;
+    margin-left: 15px;
     background-repeat: no-repeat;
   }
   .photo-section-1 .logo {
@@ -1172,7 +1187,7 @@ hr {
   .block-3__photo2 {
     position: absolute;
     top: 1655px;
-    left: 317px;
+    left: 287px;
     
   }
   .block-3__photo2 h2 {
@@ -1189,7 +1204,7 @@ hr {
     margin-top: 55px;
     position: absolute;
     top: 1655px;
-    left: 72px;
+    left: 40px;
   }
   .block-3__photo3 p {
     margin-top: 28px;
@@ -1199,7 +1214,7 @@ hr {
     height: 225px;
     position: absolute;
     top: 2407px;
-    left: -176px;
+    left: -206px;
   }
   .block-3__photo4 h2 {
     width: 240px;
