--- a/contacts.css
+++ b/contacts.css
@@ -799,7 +799,7 @@ body {
 
 .button-navi {
     position: absolute;
-    left: 350px;
+    left: 330px;
     top: 68px;
 }
 
@@ -810,7 +810,7 @@ body {
     /* margin-left: -700px; */
     margin-top: 230px;
     position: absolute;
-    left: 100px;
+    left: 80px;
     float: right;
 }
 
@@ -819,7 +819,7 @@ body {
     font-size: 32px;
     color: #FFFFFF;
     position: absolute;
-    right: 100px;
+    right: 70px;
     top: 330px;
     border: 2px solid #FFFFFF;
     width: 285px;
@@ -828,9 +828,9 @@ body {
 }
 
 .main-text {
-    width: 400px;
+    width: 370px;
     height: 200px;
-    margin-left: 50px;
+    margin-left: 20px;
     margin-top: 350px;
 }
 
@@ -848,7 +848,7 @@ h1 {
     margin-top: -30px;
     font-size: 20px;
     font-weight: normal;
-
+text-align: center;
 }
 
 
@@ -857,7 +857,7 @@ h1 {
     width: 380px;
     height: 200px;
     float: right;
-    margin-right: 50px;
+    margin-right: 20px;
     margin-top: 100px;
 }
 
@@ -915,7 +915,7 @@ h1 {
     width: 480px;
     /* justify-content: center; */
     /* border: 4px solid hotpink; */
-    height: 2700px;
+    height: 2400px;
     /* display: flex; */
     /* grid-template-columns: 1fr; */
 }
@@ -957,7 +957,7 @@ b {
     height: 700px;
     position: relative;
     left: 0px;
-    margin-top: 200px;
+    margin-top: -100px;
 }
 
 .second-h4 {
@@ -967,7 +967,7 @@ b {
     line-height: 48px;
     position: relative;
     /* margin-top: 500px; */
-    top: 1150px;
+    top: 850px;
     left: 10px;
 }
 
@@ -979,7 +979,7 @@ b {
     font-size: 25px;
     background: none;
     position: relative;
-    top: 1150px;
+    top: 850px;
     left: 10px;
     border: 2px solid black;
 }
@@ -1113,9 +1113,9 @@ margin-top: 50px;
 .book-now {
     background-color: #455c06;
     color: #FFFFFF;
-    width: 40%;
-    margin-left: 30%;
-    margin-top: 100px;
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 80px;
     height: 70px;
     font-size: 30px;
     font-family: 'Rufina';
@@ -1189,15 +1189,16 @@ footer {
 
 .footer-line {
     height: 2px;
-    margin-top: 200px;
+    margin-top: -40px;
 }
 
 .contact {
     width: 220px;
     position: relative;
-    left: 0px;
+    left: 40%;
+    top: -33%;
     height: 250px;
-    margin-top: 35px;
+    margin-top: 0%;
     font-size: 14px;
     font-family: 'Inter';
     font-weight: normal;
@@ -1224,8 +1225,8 @@ footer {
 }
 
 .footer-h4 {
-    margin-left: 80px;
-    margin-top: -40px;
+    margin-left: 50px;
+    margin-top: -280px;
     height: 40px;
 }
 
@@ -1241,7 +1242,7 @@ footer {
 .under-img {
     position: absolute;
     right: 30%;
-    margin-top: 25px;
+    margin-top: 5px;
 }
 
 
