--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ h1 {
 }
 
 .photo-home {
-    width: 500px;
+    width: 600px;
     height: 700px;
     position: absolute;
     left: 550px;
@@ -207,14 +207,14 @@ h1 {
 .block1 {
     width: 40%;
     /* border: 2px solid palegreen; */
-    margin-left: 50px;
+    margin-left: 90px;
     height: 300px;
 }
 
 .block2 {
     /* border: 2px solid palegreen; */
     width: 40%;
-    margin-left: 100px;
+    margin-left: 140px;
     height: 300px;
 
 
@@ -223,7 +223,7 @@ h1 {
 .block3 {
     /* border: 2px solid palegreen; */
     width: 40%;
-    margin-left: 50px;
+    margin-left: 90px;
     height: 300px;
 
 }
@@ -231,7 +231,7 @@ h1 {
 .block4 {
     /* border: 2px solid palegreen; */
     width: 40%;
-    margin-left: 100px;
+    margin-left: 140px;
     height: 300px;
 
 }
@@ -277,7 +277,7 @@ h1 {
 .excel-text {
     position: absolute;
     margin-top: 0px;
-    right: -50px;
+    right: 0px;
     width: 400px;
     height: 360px;
     color: black;
@@ -346,7 +346,7 @@ h1 {
     overflow-y: hidden;
     /* float: left; */
     margin-top: 200px;
-    margin-left: 10%;
+    margin-left: 13%;
 }
 
 .block-4s {
@@ -394,7 +394,7 @@ h1 {
 .first-sect {
     width: 42%;
     height: 1250px;
-    margin-left: 50px;
+    margin-left: 90px;
     background-image: url(5sect11.png);
     background-repeat: no-repeat;
 
@@ -404,7 +404,7 @@ h1 {
 .second-sect {
     width: 45%;
     height: 1250px;
-    margin-left: 60px;
+    margin-left: 100px;
     background-image: url(5sect22.png);
     background-repeat: no-repeat;
 
@@ -426,7 +426,7 @@ h1 {
 
 
 .line-text-5s1 {
-    width: 470px;
+    width: 550px;
     height: 60px;
     position: relative;
     top: 800px;
@@ -484,6 +484,8 @@ h1 {
     background-color: #EBF0E4;
     width: 100%;
     height: 750px;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-s6 {
@@ -793,7 +795,7 @@ footer {
     transition-duration: 0.7s;
 }
                                           
-                                          #new{
+                                          .new{
                                               background-color: #334601;
                                               z-index: 9;
                                               width: 100%;
@@ -858,7 +860,7 @@ footer {
 .contact-2{
     position: relative;
     top: -440px;
-    left:900px;
+    left:700px;
     font-size: 25px;
     z-index: 11;
     width: 270px;
@@ -885,7 +887,7 @@ opacity: 0.4;
 }
 
                                    
-                                   #openLogo{
+                                   .openLogo{
                                    background-image: url(Imagelogo.png);
                                    background-repeat: no-repeat;
                                    background-size: cover;
@@ -910,12 +912,12 @@ z-index: 10;
 .new-number{
     position: absolute;
     top: 0px;
-    left: 400px;
+    left: 350px;
 }
 .coming{
     position: absolute;
     top: 200px;
-    left: 390px;
+    left: 290px;
     font-size: 80px;
 color: #FFFFFF;
 font-family: 'Rufina';
@@ -925,7 +927,7 @@ font-family: 'Rufina';
 .blockings{
 position: absolute;
 top: 460px;
-left: 240px;
+left: 100px;
 display: flex;
 flex-wrap: wrap;
 
@@ -962,7 +964,7 @@ margin-top: -60px;
 font-weight: bold;
 position: absolute;
 top: 430px;
-left: 250px;
+left: 150px;
 }
 
 
@@ -976,7 +978,7 @@ left: 250px;
     font-family: 'Inter';
     position: absolute;
     top: 700px;
-    left: 580px;
+    left: 440px;
 }
 
 .new-button:hover{
@@ -1011,3 +1013,8 @@ a{
 
 
 
+
+
+.display{
+    display:  block;
+}
