--- a/about.css
+++ b/about.css
@@ -559,7 +559,7 @@ footer {
 
 
                                      
-                                     #newMenuAbout {
+                                     .newMenuAbout {
                                          z-index: 9;
                                          width: 100%;
                                          height: 1080px;
@@ -669,7 +669,7 @@ a {
                                
                                
                                
-                               #openLogoAbout {
+                               .openLogoAbout {
                                    background-image: url(Imagelogo.png);
                                    background-repeat: no-repeat;
                                    background-size: cover;
@@ -769,4 +769,8 @@ a {
 .new-button:hover {
     opacity: 0.6;
     transition-duration: 0.7s;
+}
+
+.display{
+    display: block;
 }
