--- a/main.css
+++ b/main.css
@@ -1049,7 +1049,7 @@ a{
         width: 480px;
         max-width: 480px;
         overflow-x: hidden;
-    border: 2px solid darkblue;
+    /* border: 2px solid darkblue; */
 
     }
     
@@ -1068,7 +1068,7 @@ a{
     
     .land-page {
         width: 480px;
-        height: 3200px;
+        height: 3250px;
         background-color: #233000;
     
     }
@@ -1200,7 +1200,7 @@ a{
         height: 720px;
         position: absolute;
         right: 0px;
-        top: 2305px;
+        top: 2405px;
     }
     
     .spices-text-img {
@@ -1364,7 +1364,7 @@ a{
     
     .leaf2 {
         position: absolute;
-        right: 40px;
+        right: 0px;
         width: 400px;
         height: 400px;
         margin-top: 1500px;
@@ -1393,7 +1393,7 @@ a{
     .section-4 {
         background-color: #FFFFFF;
         width: 100%;
-        height: 1400px;
+        height: 1450px;
         border: 3px solid hotpink;
         
     }
@@ -1538,7 +1538,7 @@ a{
     .s5-arrow {
         color: black;
         position: relative;
-        left: 140px;
+        left: 400px;
         top: -60px;
     }
     
@@ -1834,7 +1834,7 @@ footer {
 
 .footer-h4 {
     margin-left: 10px;
-    margin-top: -50px;
+    margin-top: 50px;
     height: 40px;
 }
 
@@ -1873,7 +1873,7 @@ footer {
 .new{
     z-index: 9;
     width: 480px;
-    height: 1380px;
+    height: 1980px;
     position: absolute;
     top: 0;
     color: #FFFFFF;
@@ -1887,7 +1887,7 @@ footer {
 }
 .newimg{
 
-height: 1580px;
+height: 2080px;
 margin-top: 0;
 
 
@@ -1948,7 +1948,7 @@ padding-top: 90px;
 
 .contact-2{
 position: relative;
-top: -700px;
+top: -500px;
 left:90px;
 font-size: 25px;
 z-index: 11;
@@ -1960,7 +1960,7 @@ margin-top: -60px;
 
 .close-new{
 margin-left: 0px;
-margin-top: 150px;
+margin-top: 300px;
 background: none;
 opacity: 1;
 position: absolute;
@@ -1997,11 +1997,15 @@ display: none;
 overflow: hidden;
 }
 
-.reserv{
+.reserv-new{
 position: absolute;
 left: 90px;
 
 
+}
+.button-navi{
+    position: absolute;
+    left: 0;
 }
 .img-logo{
 margin-top: -180px;
@@ -2010,13 +2014,13 @@ height: 1880px;
 
 .new-logo{
 position: absolute;
-top: 0px;
+top: 200px;
 z-index: 10;
 }
 .new-number{
 position: absolute;
-top: 0px;
-left: 100px;
+top: 200px;
+left: 0px;
 }
 .coming{
 position: absolute;
@@ -2101,7 +2105,9 @@ transition-duration: 0.7s;
 
 
 
-
+.display{
+    display: block;
+}
 
 
 
